# lear

./: .gitignore  .sonarcloud.properties  .spectral.mjs  .spectral.yaml  COMPLIANCE.yaml  Jenkinsfile  Makefile.template  README.md  codecov.yaml  docker-compose.yml  makefile  requirements.txt
colin-api/: Dockerfile  MANIFEST.in  Makefile  README.md  config.py  flags.json  gunicorn_config.py  manage.py  requirements.txt  setup.cfg  setup.py  wsgi.py
colin-api/.devcontainer/: Dockerfile  devcontainer.json
colin-api/Jenkinsfiles/: build.groovy  deploy-prod.groovy  deploy-test.groovy
colin-api/colin_api/: __init__.py  version.py
colin-api/devops/: vaults.json  vaults.ocp.env
colin-api/k8s/: colin-api-build-pipeline.param
colin-api/requirements/: bcregistry-libraries.txt  dev.txt  prod.txt  repo-libraries.txt  testing.txt
colin-api/scripts/: list_lint_exemptions.sh
colin-api/tests/: README.md  __init__.py  conftest.py
data-tool/flows/: __init__.py  batch_delete_flow.py  colin_freeze_flow.py  config.py  corps_tombstone_flow.py  corps_verify_flow.py  migrate_corps_flow.py  migrate_sp_gp_flow.py  pyproject.toml  refresh_extract_subset_flow.py  sp_gp_affiliation_flow.py  test_flow.py  update_colin_ar_ind_flow.py  verify_colin_updates_flow.py
gcp-jobs/entity-bn/: .env.sample  Dockerfile  Makefile  README.md  pyproject.toml  run.sh
gcp-jobs/expired-limited-restoration/: .env.sample  Dockerfile  Makefile  README.md  pyproject.toml  run.py  run.sh
gcp-jobs/filings-notebook-report/: .env.sample  Dockerfile  README.md  pyproject.toml  run.sh
gcp-jobs/furnishings/: .dockerignore  .env.sample  .gcloudignore  Dockerfile  README.md  flags.json  furnish.py  pyproject.toml
gcp-jobs/involuntary-dissolutions/: .env.sample  Dockerfile  Makefile  README.md  flags.json  pyproject.toml  run.sh
gcp-jobs/update-legal-filings/: .env.sample  Dockerfile  Makefile  README.md  pyproject.toml  run.py  run.sh  setup.py
jobs/email-reminder/: Dockerfile  Makefile  config.py  email_reminder.py  flags.json  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py
jobs/future-effective-filings/: Dockerfile  Makefile  config.py  file_future_effective.py  gunicorn_config.py  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.py
jobs/sftp-gazette/: .env.sample  Dockerfile  Makefile  README.md  config.py  datatemp.ipynb  pyproject.toml  requirements.txt  run.sh  setup.py  sftpgazette.py
jobs/update-colin-filings/: Dockerfile  Makefile  config.py  pyproject.toml  requirements.txt  run.sh  update_colin_filings.py
jobs/update-legal-filings/: Dockerfile  Makefile  config.py  pyproject.toml  requirements.txt  run.sh  setup.py  update_legal_filings.py
legal-api/: .dockerignore  .env.sample  .envrc  Dockerfile  Jenkinsfile-build.groovy  LICENSE  MANIFEST.in  Makefile  README.md  config.py  docker-compose.yml  env-wf  flags.json  gunicorn_config.py  gunicorn_server.py  manage.py  pre-hook-update-db.sh  pre_hook_create_database.py  prism.sh  pyproject copy.toml  pyproject.toml  requirements-nats.txt  requirements.txt  requirements.txt.1  setup.cfg  setup.py  test_tax_id_update.http  wsgi.py
legal-api/.devcontainer/: Dockerfile  devcontainer.json
legal-api/Jenkinsfiles/: build.groovy  deploy-prod.groovy  deploy-test.groovy  postman-pipeline.groovy
legal-api/devops/: vaults.dev  vaults.gcp.env  vaults.json  vaults.test
legal-api/k8s/: Readme.md  dc  legal-api-build-pipeline.param  legal-api-deploy.dev.param  legal-api-deploy.dev.template.param  legal-api-deploy.test.param  secret.param
legal-api/migrations/: alembic.ini  env.py  note-on-migrations.md
legal-api/notebook/: add_registrars_notation.ipynb  data.py
legal-api/report-templates/: OTADD.html  OTANN.html  OTCDR.html  agmLocationChange.html  alterationNotice.html  amalgamationApplication.html  amendedRegistrationStatement.html  annualReport.html  appointReceiver.html  bcAddressChange.html  bcAnnualReport.html  bcDirectorChange.html  businessSummary.html  ceaseReceiver.html  certificateOfAmalgamation.html  certificateOfContinuation.html  certificateOfDissolution.html  certificateOfGoodStanding.html  certificateOfIncorporation.html  certificateOfNameChange.html  certificateOfRestoration.html  certificateOfStatus.html  changeOfAddress.html  changeOfDirectors.html  changeOfLiquidators.html  changeOfName.html  changeOfRegistration.html  continuationApplication.html  correction.html  dissolution.html  firmCorrection.html  incorporationApplication.html  intentToLiquidate.html  letterOfAgmExtension.html  letterOfAgmLocationChange.html  letterOfConsent.html  letterOfConsentAmalgamationOut.html  letterUnderSeal.html  noticeOfArticles.html  noticeOfDissolutionCommencement.html  (+8 more)
legal-api/requirements/: bcregistry-libraries.txt  dev.txt  prod.txt  repo-libraries.txt
legal-api/scripts/: orphaned_data_cleanup.sql  test_ratio.sh
legal-api/tests/: __init__.py  conftest.py  docker-compose.1.yml  docker-compose.yml  pytest_marks.py
queue_services/business-bn/: .env.sample  Dockerfile  Makefile  README.md  gunicorn_config.py  pyproject.toml  wsgi.py
queue_services/business-digital-credentials/: .env.sample  Makefile  README.md  flags.json  gunicorn_config.py  pyproject.toml  wsgi.py
queue_services/business-emailer/: .dockerignore  .env.sample  .envrc  .gcloudignore  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  flags.json  manage.py  multidict-6.2.0-cp313-cp313-win_amd64.whl  pre-hook-update-db.sh  pyproject.toml  q_cli.py  setup.cfg  wsgi.py
queue_services/business-filer/: .dockerignore  Dockerfile  LICENSE  Makefile  filer_service.py  flags copy.json  flags.json  gunicorn_config.py  logging.conf  pyproject.toml  setup.cfg  setup.py  wsgi.py
queue_services/business-pay/: .dockerignore  Dockerfile  LICENSE  Makefile  README.md  flags.json  gunicorn_config.py  pay_filer.py  pyproject.toml  wsgi.py
queue_services/entity-auth/: .env.example  Dockerfile  LICENSE  Makefile  README.md  __init__.py  pyproject.toml  wsgi.py
queue_services/entity-bn/: .dockerignore  .gcloudignore  Dockerfile  LICENSE  (+11 more)
(+4187 files in other folders)
