[metadata]
name = colin_api
url = https://github.com/bcgov/colin_api
author = team-le
author_email = katie@silverbirchsolutions.com
classifiers =
    Development Status :: Beta
    Intended Audience :: Developers / QA
    Topic :: Legal Entities
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3.7
license = Apache Software License Version 2.0
description = A short description of the project
long_description = file: README.md
keywords =

[options]
zip_safe = True
python_requires = >=3.6
include_package_data = True
packages = find:

[options.package_data]
colin_api =

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[flake8]
exclude = .git,*migrations*
max-line-length = 120
docstring-min-length=10
per-file-ignores =
    */__init__.py:F401,B902
    # ignore "remove bad quotes" error in tests, since we like to copy-paste json which has double quotes instead of single.
    */test_*.py:Q000
    *.py:B902

[pycodestyle]
max_line_length = 120
ignore = E501
docstring-min-length=10
notes=FIXME,XXX # TODO is ignored
match_dir = src/colin_api
ignored-modules=flask_sqlalchemy
    sqlalchemy
per-file-ignores =
    */__init__.py:F401
good-names=
    b,
    d,
    i,
    e,
    f,
    u,
    k,
    v,
    rv,
    logger,

[pylint]
ignore=migrations,test
max_line_length=120
notes=FIXME,XXX,TODO
ignored-modules=flask_sqlalchemy,sqlalchemy,SQLAlchemy,alembic,scoped_session
ignored-classes=scoped_session
min-similarity-lines=100
disable=C0301,W0511,R0801,R0902,E1136

[isort]
line_length = 120
indent = 4
multi_line_output = 4
lines_after_imports = 2
include_trailing_comma = True

[tool:pytest]
addopts = --cov=src --cov-report html:htmlcov --cov-report xml:coverage.xml
testpaths = tests/unit
filterwarnings =
    ignore::UserWarning

[report:run]
exclude_lines =
    pragma: no cover
    from
    import
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
