[project]
name = "legal-api"
version = "3.1.0"
description = ""
authors = [
    {name = "thor",email = "1042854+thorwolpert@users.noreply.github.com"}
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13,<3.14"

dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-jwt-oidc (>=0.8.0,<0.9.0)",
    "launchdarkly-server-sdk (>=9.10.0,<10.0.0)",
    "flask-caching (>=2.4.0)",
    "flask-cors (>=6.0.2,<7.0.0)",
    "flask-pydantic (>=0.14.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "dpath (>=2.2.0,<3.0.0)",
    "psycopg2-binary (>=2.9.10)",
    # FUTURE: look at removing
    "python-dateutil (>=2.8.2)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    # FUTURE: look at removing
    "strict-rfc3339 (==0.7)",
    # FUTURE: look at removing restriction
    "minio (==7.0.2)",
    "pypdf (>=6.12.1)",
    "reportlab (>=4.5.0)",
    # FUTURE: look at removing restriction
    "html-sanitizer (==2.4.1)",
    "lxml (>=6.1.1)",

    "business-model @ git+https://github.com/bcgov/lear.git@main#subdirectory=python/common/business-registry-model",
    "business-registry-account @ git+https://github.com/bcgov/lear.git@main#subdirectory=python/common/business-registry-account",
    "business-registry-common @ git+https://github.com/bcgov/lear.git@main#subdirectory=python/common/business-registry-common",
    "business-registry-digital-credentials @ git+https://github.com/bcgov/lear.git@main#subdirectory=python/common/business-registry-digital-credentials",
    "business-registry-dissolution @ git+https://github.com/bcgov/lear.git@main#subdirectory=python/common/business-registry-dissolution",
    "cloud-sql-connector @ git+https://github.com/bcgov/sbc-connect-common.git@main#subdirectory=python/cloud-sql-connector",
    "gcp-queue @ git+https://github.com/bcgov/sbc-connect-common.git@main#subdirectory=python/gcp-queue",
    "structured-logging @ git+https://github.com/bcgov/sbc-connect-common.git@main#subdirectory=python/structured-logging"
]

[tool.poetry]
packages = [{ include = "legal_api", from = "src" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.4"
pytest = "^8.3.5"
pytest-cov = "^7.0.0"
freezegun = "^1.5.1"
testcontainers = "^4.10.0"
google-cloud-datastore = "^2.20.2"
hypothesis = "^6.131.0"
pytest-mock = "^3.14.0"
requests-mock = "^1.12.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".vscode",
    "dist",
    "htmlcov",
    ".venv",
    "migrations",
    "devops",
    ".history",
    "tests"
]

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.13
# target-version = "py313"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "TID252",
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ERA", # flake8-eradicate/eradicate
    "Q",   # flake8-quotes
    "I",   # isort
    "N",   # pep8-naming
    "PIE", # flake8-pie
    "PL",  # pyLint
    "PLR0913", # Too many arguments in function definition
    "PGH", # pygrep
    "RUF", # ruff checks
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "TID252", # relative imports
    "UP",  # pyupgrade
    "F", # pyflakes
    "W291",
]
ignore = ["RUF012"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = [
    "ERA", # do not autoremove commented out code
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
known-first-party = [
   "business_account",
   "business_common",
   "business_model",
   "business_model_migrations",
   "business_registry_digital_credentials",
   "cloud_sql_connector",
   "dissolution_service",
   "flask_jwt_oidc",
   "gcp_queue",
   "registry_schemas",
   "structured_logging"
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.extend-per-file-ignores]
"**/__init__.py" = ["F401"]  # used for imports
"**/config.py" = ["T201"]  # allow print instead of logger in config

[tool.pytest.ini_options]
minversion = "2.0"
testpaths = [
   "tests",
]
addopts = "--cov=src/legal_api"
python_files = [
   "test*.py"
]
norecursedirs = [
   ".git", ".tox", "venv*", "requirements*", "build",
]
log_cli = true
log_cli_level = "1"
filterwarnings = [
   "ignore::UserWarning"
]
markers = [
   "slow",
   "serial",
]

[tool.coverage.run]
branch = true
source = [
   "src/legal_api",
]
omit = [
]

[tool.coverage.report]
exclude_lines = [
   "pragma: no cover",
   "from",
   "import",
   "def __repr__",
   "if self.debug:",
   "if settings.DEBUG",
   "raise AssertionError",
   "raise NotImplementedError",
   "if 0:",
   'if __name__ == "__main__":',
]
