[project]
name = "common"
version = "1.0.0"
description = "Shared Utilities"
authors = []
requires-python = ">=3.11"
dependencies = []

[tools.setuptools]
packages = ["common"]

[tools.setuptools.package-dir]
common = "."

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
